deploy: 27b5a7ff6abc27c147c0be2b2662d184a950e99f

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body><div class="container">
   <h1>🧪 Allure Reports Dashboard</h1>
   <h2>📘 Full Test Suite Reports</h2><ul>
-<li><a href="all-reports/run-*/index.html" target="_blank">all-reports/run-*</a> <span class="tag">all-reports/run-*</span></li>
+<li><a href="all-reports/run-*/index.html" target="_blank">run-*</a> <span class="tag">run-*</span></li>
 </ul><h2>🎯 Single Test Reports</h2><ul>
-<li><a href="single-test-reports/*/index.html" target="_blank">single-test-reports/*</a> <span class="tag">single-test-reports/*</span></li>
+<li><a href="single-test-reports/*/index.html" target="_blank">*</a> <span class="tag">*</span></li>
   </ul><div class="footer">Deployed with ❤️ by GitHub Actions</div></div></body></html>
